--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.3.1",
+    "csurf": "^1.11.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
@@ -22,6 +25,8 @@
     "mongodb": "^3.5.3",
     "mongoose": "^5.9.1",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.5",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^2.0.4",
     "sequelize": "^5.21.4"
   }
