--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.17.0",
+    "express-validator": "^6.4.0",
     "mongodb": "^3.5.3",
     "mongoose": "^5.9.1",
     "mysql2": "^2.1.0",
