--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "express-validator": "^6.4.0",
     "mongodb": "^3.5.3",
     "mongoose": "^5.9.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.5",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.11.0",
     "pug": "^2.0.4",
-    "sequelize": "^5.21.4"
+    "sequelize": "^5.21.4",
+    "stripe": "^8.38.0",
+    "uuid": "^7.0.2"
   }
 }
